EKS-K8s/reverse-proxy/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
